[package]
name = "unrpyc_rs"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[[bin]]
name = "unrpyc_rs"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde-pickle = "1.2"
flate2 = "1.0"
anyhow = "1.0"
thiserror = "1.0"
memmap2 = "0.9"
hex = "0.4"
walkdir = "2.4"
